<resources>
    <string name="app_name">MP3 Music Player</string>
    <string name="tab_songs">Songs</string>
    <string name="tab_playlists">Playlists</string>
    <string name="tab_folders">Folders</string>
    <string name="tab_artists">Artists</string>
    <string name="tab_albums">Albums</string>
    <string name="tab_genres">Genres</string>
    <string name="tab_books">Audiobooks</string>
    <string name="tab_settings">Settings</string>
    <string name="tab_all_songs">All Songs</string>
    <string name="tab_downloads">Downloads</string>
    <string name="tab_favorites">Favorites</string>
    <string name="tab_recent">Recent</string>
    <string name="select_identity">Choose Theme</string>
    <string name="theme_midnight_gold">Midnight Gold</string>
    <string name="theme_royal_violet">Royal Violet</string>
    <string name="theme_ocean_cyan">Ocean Cyan</string>
    <string name="theme_cyber_red">Cyber Red</string>
    <string name="theme_cyber_rose">Cyber Rose (Neon)</string>
    <string name="theme_electric_violet">Electric Violet</string>
    <string name="theme_ice_cyan">Ice Cyan</string>
    <string name="theme_toxic_lime">Toxic Lime</string>
    <string name="theme_sunset_orange">Sunset Orange</string>
    <string name="theme_midnight_eclipse">Midnight Eclipse</string>
    <string name="theme_customization">Theme Customization</string>
    <string name="theme_black">Black Royal</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_dynamic">Dynamic</string>
    <string name="theme_light">Light</string>
    <string name="theme_system">System</string>
    <string name="change_background">Change Background</string>
    <string name="bg_category_gradient">Gradients [%d]</string>
    <string name="bg_category_solid">Solid Colors [%d]</string>
    <string name="bg_category_nature">Nature [%d]</string>
    <string name="bg_category_custom">Your Photos [%d]</string>
    <string name="bg_swipe_hint">Swipe for more</string>
    <string name="pick_from_gallery">Choose from Gallery</string>
    <string name="background_updated">Background updated successfully</string>
    <string name="play">Play</string>
    <string name="play_all">Play All</string>
    <string name="pause">Pause</string>
    <string name="shuffle">Shuffle</string>
    <string name="shuffle_all">Shuffle All</string>
    <string name="lyrics">Lyrics</string>
    <string name="now_playing">Now Playing</string>
    <string name="next_track">Next Track</string>
    <string name="prev_track">Previous Track</string>
    <string name="repeat_all">Repeat All</string>
    <string name="repeat_one">Repeat One</string>
    <string name="playback_speed">Playback Speed</string>
    <string name="playback_speed_msg">Speed: %s</string>
    <string name="equalizer">Equalizer</string>
    <string name="off">Off</string>
    <string name="play_format">Play (%1$d/%2$d)</string>
    <string name="play_count_format">Play (%d)</string>
    <string name="track_index_format">#%1$d/%2$d</string>
    <string name="volume_percent_format">%d%%</string>
    <string name="song_count_format">%d Songs</string>
    <string name="sort">Sort</string>
    <string name="sort_name">Name</string>
    <string name="sort_date">Date</string>
    <string name="sort_artist">Artist Name</string>
    <string name="sort_album">Album</string>
    <string name="sort_ascending">Ascending</string>
    <string name="sort_descending">Descending</string>
    <string name="sort_duration">Duration</string>
    <string name="sort_size">Size</string>
    <string name="action_cut_ringtone">Cut Ringtone</string>
    <string name="action_change_cover">Change Album Cover</string>
    <string name="action_rename">Rename</string>
    <string name="action_edit_tags">Edit Tags</string>
    <string name="action_play_next">Play Next</string>
    <string name="action_play_prev">Play Previous</string>
    <string name="action_select_all">Select All</string>
    <string name="action_details">Details</string>
    <string name="action_go_to_album">Go to Album</string>
    <string name="action_go_to_artist">Go to Artist</string>
    <string name="action_youtube">Search on YouTube</string>
    <string name="action_hide">Hide Song</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="playlist_add">Add to List</string>
    <string name="playlist_clear">Clear List</string>
    <string name="playlist_create">Create List</string>
    <string name="playlist_delete">Delete List</string>
    <string name="playlist_edit">Edit List</string>
    <string name="playlist_play_all">Play All</string>
    <string name="playlist_remove">Remove from List</string>
    <string name="playlist_rename">Rename List</string>
    <string name="playlist_shuffle">Shuffle List</string>
    <string name="set_as_ringtone">Set as Ringtone</string>
    <string name="set_ringtone">Set Ringtone</string>
    <string name="share">Share</string>
    <string name="share_app">Share App</string>
    <string name="share_text">Check out this awesome MP3 Player app!</string>
    <string name="rate_us">Rate Us</string>
    <string name="check_updates">Update App</string>
    <string name="exit">Exit</string>
    <string name="exit_app">Exit Application</string>
    <string name="my_playlist">My Playlist</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="added_to_favorites">Added to Favorites</string>
    <string name="selected_count">Selected %d</string>
    <string name="favorite">Favorite</string>
    <string name="song_info">Song Info</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="apply">Apply</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="search_hint">Search for a song…</string>
    <string name="setting_language">Choose Language</string>
    <string name="setting_fade">Crossfade</string>
    <string name="setting_shake">Shake to switch song</string>
    <string name="setting_change_theme">Change Theme</string>
    <string name="setting_scan_storage">Update Library</string>
    <string name="setting_audio_effects">Audio Effects</string>
    <string name="setting_app_lock">App Lock</string>
    <string name="setting_filter_short">Filter Short Files</string>
    <string name="setting_header_general">General Settings</string>
    <string name="header_files">Files &amp; Storage</string>
    <string name="header_audio">Audio &amp; Playback</string>
    <string name="header_appearance">Appearance &amp; Language</string>
    <string name="header_support">Advanced Tools &amp; Support</string>
    <string name="why_songs_hidden">Why are some songs hidden?</string>
    <string name="delete_duplicates">Find duplicate songs</string>
    <string name="manage_trash">Trash Bin</string>
    <string name="pause_on_loss">Stop on Earphone Unplug</string>
    <string name="bt_block">Block Bluetooth</string>
    <string name="album_grid">Album Grid</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="update_app">Update Application</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="manage_tabs">Manage Tabs</string>
    <string name="app_locked">App Locked</string>
    <string name="welcome_back">Welcome back</string>
    <string name="enter_pin_to_continue">Enter PIN to continue</string>
    <string name="use_biometric_desc">Please use fingerprint to enter</string>
    <string name="biometric_fail">Verification failed</string>
    <string name="incorrect_pin">Incorrect PIN</string>
    <string name="btn_biometric_retry">Retry</string>
    <string name="developer">Developer</string>
    <string name="developer_name">Mohammad</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="version">Version</string>
    <string name="support">Technical Support</string>
    <string name="support_contact">Support Contact</string>
    <string name="support_email_subject">Issue or Suggestion - MP3 Player</string>
    <string name="support_email_body">\n\n\n--- Device Info ---\n</string>
    <string name="no_music_found">No music found</string>
    <string name="no_permission_msg">Storage permission is required to show your songs</string>
    <string name="permission_required">Permission required</string>
    <string name="song_deleted">Deleted successfully</string>
    <string name="delete">Delete</string>
    <string name="ringtone_set">Ringtone set successfully</string>
    <string name="error_setting_ringtone">Error setting ringtone</string>
    <string name="loading">Loading…</string>
    <string name="renamed_to">Renamed to %s</string>
    <string name="trash_empty">Trash is empty</string>
    <string name="backup_saved">Backup saved!</string>
    <string name="settings_restored">Settings restored!</string>
    <string name="pro_features">Pro features activated!</string>
    <string name="confirm_delete">Are you sure you want to delete "%s"?</string>
    <string name="confirm_delete_duplicates">Will search for matching files and delete duplicates permanently. Continue?</string>
    <string name="confirm_clear_playlist">Clear list?</string>
    <string name="confirm_delete_playlist">Delete list?</string>
    <string name="confirm_exit">Exit application?</string>
    <string name="confirm_stop_download">Stop download?</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="sleep_timer_set">Sleep timer set for %d minutes</string>
    <string name="sleep_timer_msg">App will close in %d minutes</string>
    <string name="mb_unit">MB</string>
    <string name="sec_unit">sec</string>
    <string name="no_folders">No folders found</string>
    <string name="no_albums">No albums found</string>
    <string name="no_artists">No artists found</string>
    <string name="no_favorites">Favorites list is empty</string>
    <string name="skin_selector_title">Player Themes</string>
    <string name="cutter_title">Ringtone Cutter</string>
    <string name="save_and_set_ringtone">Save &amp; Set as Ringtone</string>
    <string name="skin_0">Circular Neon</string>
    <string name="skin_1">Retro Vinyl</string>
    <string name="skin_2">Mandala Art</string>
    <string name="skin_3">Square Glass</string>
    <string name="skin_4">Panorama View</string>
    <string name="skin_5">Full Blur</string>
    <string name="skin_6">Minimalist Design</string>
    <string name="skin_7">Visualizer Spectrum</string>
    <string name="skin_8">Top Arc</string>
    <string name="skin_9">Glass Capsule</string>
    <string name="skin_10">Poster Art</string>
    <string name="skin_11">Side Progress</string>
    <string name="aspect_fit">Fit</string>
    <string name="aspect_stretch">Stretch</string>
    <string name="aspect_zoom">Zoom</string>
    <string name="control_play">Play</string>
    <string name="control_pause">Pause</string>
    <string name="control_stop">Stop</string>
    <string name="control_next">Next</string>
    <string name="control_previous">Previous</string>
    <string name="control_rotate">Rotate</string>
    <string name="control_flip">Flip</string>
    <string name="control_cast">Cast</string>
    <string name="control_download">Download</string>
    <string name="control_lock">Lock</string>
    <string name="control_more">More</string>
    <string name="control_rewind">Rewind</string>
    <string name="control_forward">Forward</string>
    <string name="control_pip">PiP</string>
    <string name="control_unlock">Unlock</string>
    <string name="control_repeat">Repeat</string>
    <string name="control_shuffle">Shuffle</string>
    <string name="control_share">Share</string>
    <string name="speed_normal">Normal Speed</string>
    <string name="unknown_title">Unknown Title</string>
</resources>